@@ -407,14 +407,14 @@ static config_node *cfg_get_single_value(config_obj *cfg, char *class, char *key
 	return NULL;                                     	
 }
 
-void cfg_free_string(char *string)
+/*void cfg_free_string(char *string)
 {
 	if(string != NULL)
 	{
 		g_free(string);
 	}
 }
-
+*/
 static char * __int_cfg_get_single_value_as_string(config_obj *cfg, char *class, char *key)
 {
 	config_node *cur = cfg_get_single_value(cfg, class,key);
